Fix category margin col gap

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -468,6 +468,7 @@ body {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   grid-column-gap: 2rem;
+  grid-row-gap: 3rem;
 }
 
 
